# bitpart-fast-euclidean

./: Cargo.toml  README.md
src/: lib.rs
