[package]
name = "bitpart-fast-euclidean"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitpart = { path = "../bitpart-rs" }
serde = { version = "1.0.152", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]